--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "yarn start --prefix client",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\""
   },
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
+    "concurrently": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
@@ -21,3 +25,14 @@
     "nodemon": "^2.0.2"
   }
 }
+"Not sure where to implement this security"
+  "contentSecurityPolicy": {
+    "default-src": "none",
+    "script-src": "self",
+    "font-src": "self",
+    "connect-src": "self",
+    "img-src": "self",
+    "report-uri": "localhost",
+    "style-src": "self",
+    "frame-src": "none"
+  }
